--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "mongoose": "^7.0.0",
